--- a/MijnTestApplicatie/app/src/main/res/values/strings.xml
+++ b/MijnTestApplicatie/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_overview">OverviewActivity</string>
+    <string name="title_activity_location">LocationActivity</string>
 
 </resources>
