Async not working

--- a/MijnTestApplicatie/app/src/main/res/values/strings.xml
+++ b/MijnTestApplicatie/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_overview">OverviewActivity</string>
     <string name="title_activity_location">LocationActivity</string>
+    <string name="title_activity_item">itemActivity</string>
 
 </resources>
