--- a/TouristGuideApplicatie/app/src/main/res/values/strings.xml
+++ b/TouristGuideApplicatie/app/src/main/res/values/strings.xml
@@ -7,10 +7,17 @@
     <string name="title_section3">Eetcafes</string>
     <string name="title_section4">Evenementen</string>
     <string name="title_section5">What is near?!</string>
+    <string name="title_section6">Submit a Place</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example"></string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
+
+    <string-array name="categorieën">
+        <item>Monumenten en Musea</item>
+        <item>Cafés</item>
+        <item>Evenementen</item>
+    </string-array>
 
 </resources>
