werk  gedaan----------> weet niet meer wat.
submit werkt

--- a/TouristGuideApplicatie/app/src/main/res/values/strings.xml
+++ b/TouristGuideApplicatie/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="hello_world">Hello world!</string>
 
     <string-array name="categorieën">
-        <item>Monumenten en Musea</item>
+        <item>Monumenten</item>
         <item>Cafés</item>
         <item>Evenementen</item>
     </string-array>
