layout dingetjes en alle categori"een kunnen nu geupload worden

--- a/TouristGuideApplicatie/app/src/main/res/values/strings.xml
+++ b/TouristGuideApplicatie/app/src/main/res/values/strings.xml
@@ -2,12 +2,13 @@
 <resources>
 
     <string name="app_name">Tourist Guide</string>
-    <string name="title_section1">Categories</string>
+    <string name="title_section1">Categorieȅn</string>
     <string name="title_section2">Monumenten</string>
     <string name="title_section3">Eetcafes</string>
     <string name="title_section4">Evenementen</string>
-    <string name="title_section5">What is near?!</string>
-    <string name="title_section6">Submit a Place</string>
+    <string name="title_section5">Musea</string>
+    <string name="title_section6">Wat is er in de buurt</string>
+    <string name="title_section7">Voeg een locatie toe</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example"></string>
@@ -20,6 +21,7 @@
         <item>Monumenten</item>
         <item>Cafés</item>
         <item>Evenementen</item>
+        <item>Musea</item>
     </string-array>
 
 </resources>
