--- a/TouristGuideApplicatie/app/src/main/res/values/strings.xml
+++ b/TouristGuideApplicatie/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Tourist Guide</string>
-    <string name="title_section1">Categorieën</string>
+    <string name="title_section1">Kaart</string>
     <string name="title_section2">Monumenten</string>
     <string name="title_section3">Eetcafes</string>
     <string name="title_section4">Evenementen</string>
