--- a/TouristGuideApplicatie/app/src/main/res/values/strings.xml
+++ b/TouristGuideApplicatie/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     </string-array>
 
     <string name="title_activity_item">ItemActivity</string>
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 
 </resources>
