Animatie voor naar binnen gaan werkt.  Weer naar buiten blijven de plaatjes ontzichtbaar?? Staat een Array met pictureboxes klaar om voor de gebieden te gebruiken.

--- a/TouristGuideApplicatie/app/src/main/res/values/strings.xml
+++ b/TouristGuideApplicatie/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Tourist Guide</string>
+    <string name="app_name">Rondje Rotterdam</string>
     <string name="title_section1">Kaart</string>
     <string name="title_section2">Monumenten</string>
     <string name="title_section3">Eetcafes</string>
